Revert "fix IE11 layout bug"
This reverts commit 57a27ec4b5bf21f2c38480ce6ab5c32d3d36a37d.

--- a/src/assets/styles/base/_layout.scss
+++ b/src/assets/styles/base/_layout.scss
@@ -7,7 +7,6 @@ body {
 .layout {
     display: flex;
     flex-direction: column;
-    height: 99.99vh; // IE11 flexbox column bug
     min-height: 100%;
     min-height: 100vh;
     position: relative;
